modificações no menu
fora criados os menus superior no modo professor

--- a/professor.html
+++ b/professor.html
@@ -9,17 +9,17 @@
 	<div class="topo">
 		<div class="topo_int">
 			<ul class="menu">
-					<li><a href="" class="ativo">Home</a></li>
-					<li><a href="">cadastro</a>
+					<li><a href=""><div class="home">Home</div></a></li>
+					<li><a href=""><div class="cadastro">cadastro</div></a>
 						<img src="assets/images/arrowdown.jpg" border="0" width="10" />
 						<div class="submenu">
 							<a href=""><div class="submenuitem">Treino</div></a>
 							<a href=""><div class="submenuitem">Grupo Muscular</div></a>
 						</div>
 					</li>
-					<li><a href="">Ficha Atividade</a></li>
-					<li><a href="">Medidas</a></li>
-					<li><a href="">Avaliação</a></li>
+					<li><a href=""><div class="ficha">Ficha Atividade</div></a></li>
+					<li><a href=""><div class="medidas">Medidas</div></a></li>
+					<li><a href=""><div class="avaliacao">Avaliação</div></a></li>
 			</ul>
 		</div>
 	</div>
