Adicionado funcionalidade - Professor
adicionado algumas funcionalidade

--- a/professor.html
+++ b/professor.html
@@ -23,8 +23,27 @@
 			</ul>
 		</div>
 	</div>
+</div>
+<div class="conteiner_corpo">
+	<div class="corpo">
+	   <div class="titulo_corpo" style="font-size:25px; padding-top:40px;border-bottom:2px solid #fff">
+	   	  Ficha de treino - Aluno(a)
+	   </div>
+	   <div class="botao_corpo" style="display:flex; flex-direction:row;">
+	   	   <div class="botao_selecao">
+	   	   	   <select name="opcao" style="width:150px;height:36px;margin-top:20px;align-items:center;font-size:15px;border:0px;outline:0;">
+	   	   	   		<option value="1">Nome Aluno</option>
+	   	   	   		<option value="2">Ficha Espirada</option>
+	   	   </div>
+	   	   <div class="corpo_data_inicial">
+	   	   	    <input type="date" style="width:150px;height:36px;margin-left:30px;align-items:center;font-size:15px;border:0px;outline:0;margin-top:20px;" />
+	   	   </div>
+	   	   <div class="corpo_data_final">
+	   	   	    <input type="date" style="width:150px;height:36px;margin-left:30px;align-items:center;font-size:15px;border:0px;outline:0;margin-top:20px;" />
+	   	   </div>	   	   
 
-
+	   </div>
+	</div>
 </div>
 
 </body>
