--- a/professor.html
+++ b/professor.html
@@ -1,5 +1,7 @@
-<html>
+<! DOCTYPE html>
+<html lang="pt-br">
 	<head>
+		<meta nome="viewport" content="width=device-width, initial-scale=1.0," />
 		<meta charset="utf-8" />
 		<title>Academia Doce Nado | Entrar</title>
 		<link href="arquivos/css/style3.css" rel="stylesheet" />
@@ -31,19 +33,80 @@
 	   </div>
 	   <div class="botao_corpo" style="display:flex; flex-direction:row;">
 	   	   <div class="botao_selecao">
-	   	   	   <select name="opcao" style="width:150px;height:36px;margin-top:20px;align-items:center;font-size:15px;border:0px;outline:0;">
+	   	   	   <select name="opcao" style="width:150px;height:36px;margin-top:20px;align-items:center;font-size:15px;border:0px;outline:0;cursor:pointer;">
 	   	   	   		<option value="1">Nome Aluno</option>
 	   	   	   		<option value="2">Ficha Espirada</option>
+	   	   	   		<option value="3">Aluno Bloqueado</option>
+	   	   	   	</select>
 	   	   </div>
+
+	   	   	<div class="botao_selecao_fixa">
+	   	   	   <select name="opcao" style="width:150px;height:36px;margin-top:20px;align-items:center;font-size:15px;border:0px;outline:0;cursor:pointer;margin-left:30px">
+	   	   	   		<option value="1">Ficha Ativa</option>
+	   	   	   		<option value="2">ficha Inativa</option>
+	   	   	   		<option value="3">Tudo</option>
+	   	   	   	</select>
+	   	   </div>
+
 	   	   <div class="corpo_data_inicial">
-	   	   	    <input type="date" style="width:150px;height:36px;margin-left:30px;align-items:center;font-size:15px;border:0px;outline:0;margin-top:20px;" />
+	   	   	   <input type="date" style="width:150px;height:36px;margin-left:30px;align-items:center;font-size:15px;border:0px;outline:0;margin-top:20px;text-align:center;cursor:pointer;" />
 	   	   </div>
 	   	   <div class="corpo_data_final">
-	   	   	    <input type="date" style="width:150px;height:36px;margin-left:30px;align-items:center;font-size:15px;border:0px;outline:0;margin-top:20px;" />
-	   	   </div>	   	   
-
+	   	   	    <input type="date" style="width:150px;height:36px;margin-left:30px;align-items:center;font-size:15px;border:0px;outline:0;margin-top:20px; text-align:center;cursor:pointer;" />
+	   	   </div>	   
+	   	   <div class="corpo_botao_pesquisar">
+	   	   	    <input type="submit" value="Pesquiar" style="width:150px;height:36px;margin-left:30px;align-items:center;font-size:15px;border:0px;outline:0;margin-top:20px; text-align:center;cursor:pointer; background-color:#0080ff;color:#fff" />
+	   	   </div>		   
+	   	   <div class="corpo_botao_limpar">
+	   	   	    <input type="submit" value="Limpar" style="width:150px;height:36px;margin-left:30px;align-items:center;font-size:15px;border:0px;outline:0;margin-top:20px; text-align:center;cursor:pointer; color:#000" />
+	   	   </div>	
 	   </div>
+	   <div class="corpo_pesquisa" style="display:flex;justify-content:space-between;">
+		   <div class="corpo_pesquisa_excel">
+		   		<input type="submit" value="Excel" style="width:100px;height:36px;;align-items:center;font-size:15px;border-radius:7px;outline:0;margin-top:20px; text-align:center;cursor:pointer; color:#000"; />
+		   </div>
+		   <div class="corpo_pesquisa_texto" />
+		   		<input type="search" nome="pesquisa" required placeholder="Pesquisar" style="width:150px;height:36px;margin-left:10px;align-items:right;font-size:15px;border:0px;outline:0;margin-top:20px; text-align:center;cursor:pointer; color:#000" />
+		   </div>
+		</div>
+		<div class="corpo_pesquisa" style="">
+				<div class="corpo_pesquisa_lista_interacao" style="display:flex;">	
+					<div class="" style="display:flex; width:10%;background-color:#f9f9f9; color:#000;border:1px solid #ccc; margin-top:10px; padding-left:7px;border-bottom:4px; "># </div>
+					<div class="" style="display:flex;  width:20%;background-color:#f9f9f9; color:#000;border:1px solid #ccc; margin-top:10px;padding-left:7px;border-bottom:4px;">Ficha
+					</div>
+					<div class="" style="display:flex;  width:20%;background-color:#f9f9f9; color:#000;border:1px solid #ccc; margin-top:10px;padding-left:7px;border-bottom:4px;">Aluno
+					</div>
+					<div class="" style="display:flex;  width:20%;background-color:#f9f9f9; color:#000;border:1px solid #ccc; margin-top:10px;padding-left:7px;border-bottom:4px;">Matricula
+					</div>
+					<div class="" style="display:flex;  width:20%;background-color:#f9f9f9; color:#000;border:2px solid #ccc; margin-top:10px;padding-left:7px;border-bottom:4px;">Status
+					</div>
+					<div class="" style="display:flex;  width:20%;background-color:#f9f9f9; color:#000;border:1px solid #ccc; margin-top:10px;padding-left:8px;border-bottom:4px;">Professor
+					</div>
+				</div>
+
+				<div class="corpo_pesquisa_lista_conteudo">
+						<ul style="width:100%;">
+							<li style="display:flex; background-color:#f9f9f9; width:8.6%; color:#000; margin-top:-15px; margin-left:-39px;padding-left:7px; border-top:1px solid red;">...</li>
+
+							<li style="display:flex; background-color:#f9f9f9; width:17.4%; color:#000; margin-top:-15px; margin-left:-39px;padding-left:7px; border-top:1px solid red;">...</li>
+
+							<li style="display:flex; background-color:#f9f9f9; width:17.4%; color:#000; margin-top:-15px; margin-left:-39px;padding-left:7px; border-top:1px solid red;">...</li>
+
+							<li style="display:flex; background-color:#f9f9f9; width:17.4%; color:#000; margin-top:-15px; margin-left:-39px;padding-left:7px; border-top:1px solid red;">...</li>
+
+							<li style="display:flex; background-color:#f9f9f9; width:17.4%; color:#000; margin-top:-15px; margin-left:-39px;padding-left:7px; border-top:1px solid red;">...</li>
+
+							<li style="display:flex; background-color:#f9f9f9; width:17.4%; color:#000; margin-top:-15px; margin-left:-39px;padding-left:7px; border-top:1px solid red;">...</li>
+						</ul>
+
+					
+				</div>
+		</div>
+
 	</div>
+
+	</div>
+
 </div>
 
 </body>
